<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/interfaceColor"
    tools:context="com.majorproject.groceryshopping.sellingapplication.AddItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_padding"
        android:background="@drawable/fragment_background"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_item"
            android:textSize="@dimen/large_text_size"
            android:padding="@dimen/button_padding"
            android:textColor="@color/black"
            android:background="@drawable/button_background"
            android:layout_margin="@dimen/layout_padding"/>

        <ImageView
            android:id="@+id/addItemImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_padding"
            android:background="@drawable/ic_add_photo_black_24dp"
            />

        <EditText
            android:id="@+id/addItemName_addItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />

        <EditText
            android:id="@+id/addMarketPrice_addItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/market_price"
            android:inputType="number"/>

        <EditText
            android:id="@+id/addOffer_addItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/offer_discount"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/no_offer_disclamer" />


        <Button
            android:id="@+id/saveItem_addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/save"
            android:background="@drawable/button_background"/>

    </LinearLayout>
</FrameLayout>
